# stm32l452-serial

./: .gdbinit  .gitignore  Cargo.toml  README.md  build.rs  gdb.py  memory.x
.cargo/: config
src/: clocks.rs  lib.rs  uart.rs
