[package]
authors = ["Wannes De Smet <wannes.de.smet@be-mobile.com>"]
categories = ["embedded", "no-std"]
description = "FTLS TLC"
keywords = ["arm", "cortex-m", "template"]
license = "Commercial"
name = "ftl_tlc"
repository = "https://github.com/japaric/cortex-m-quickstart"
version = "0.0.1"

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.5.1"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.3.0"
half = "1.1.1"

[dependencies.stm32l4]
version = "0.2.1"
features = ["stm32l4x2", "rt"]

# Uncomment for the panic example.
# panic-itm = "0.1.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.4"

# Uncomment for the device example.
# [dependencies.stm32f103xx]
# features = ["rt"]
# version = "0.10.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations